# pandora-web-server

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release_changelog.yml
auth-module/: Cargo.toml  README.md
auth-module/src/: basic.rs  common.rs  lib.rs  page.rs
common-log-module/: Cargo.toml  README.md
common-log-module/src/: configuration.rs  handler.rs  lib.rs  signal.rs  writer.rs
compression-module/: Cargo.toml  README.md
compression-module/src/: lib.rs
docs/: README.md  auth-module.md  common-log-module.md  compression-module.md  headers-module.md  ip-anonymization-module.md  rewrite-module.md  server-configuration.md  startup-module.md  static-files-module.md  upstream-module.md  virtual-hosts-module.md
examples/custom-module/: Cargo.toml  README.md  config.yaml
examples/custom-module/src/: main.rs  web_app.rs
examples/single-static-root/: Cargo.toml  README.md  config.yaml
examples/single-static-root/src/: main.rs
examples/virtual-hosts/: Cargo.toml  README.md  config.yaml
examples/virtual-hosts/config/: 10-main.yaml  20-local.yaml  30-upstream.yaml  40-tls.yaml  key_example.com.pem
examples/virtual-hosts/src/: main.rs
headers-module/: Cargo.toml  README.md
headers-module/src/: configuration.rs  deserialize.rs  handler.rs  lib.rs  processing.rs
ip-anonymization-module/: Cargo.toml  README.md
ip-anonymization-module/src/: lib.rs
module-utils/: Cargo.toml  README.md
module-utils-macros/: Cargo.toml  README.md
module-utils-macros/src/: derive_deserialize_map.rs  derive_request_filter.rs  lib.rs  merge_conf.rs  merge_opt.rs  tests.rs  utils.rs
module-utils/src/: deserialize.rs  lib.rs  merger.rs  pingora.rs  router.rs  standard_response.rs  trie.rs
pandora-module-utils/: Cargo.toml
pandora-module-utils-macros/: Cargo.toml  README.md
pandora-module-utils-macros/src/: derive_deserialize_map.rs  derive_request_filter.rs  lib.rs  merge_conf.rs  merge_opt.rs  tests.rs  utils.rs
pandora-module-utils/src/: deserialize.rs  jar.rs  lib.rs  merger.rs  pingora.rs  router.rs  standard_response.rs  trie.rs
pandora-web-server/: Cargo.toml  README.md
pandora-web-server/config/: 10-main.yaml  20-local.yaml  30-upstream.yaml  40-tls.yaml  cert_example.com.pem  cert_localhost.pem  key_localhost.pem
pandora-web-server/src/: main.rs
pingora-utils-core/: Cargo.toml  README.md
pingora-utils-core/src/: lib.rs
response-module/: Cargo.toml  README.md
response-module/src/: lib.rs
rewrite-module/: Cargo.toml  README.md
rewrite-module/src/: configuration.rs  handler.rs  lib.rs
startup-module/: Cargo.toml  README.md
startup-module/src/: configuration.rs  lib.rs  redirector.rs
static-files-module/: Cargo.toml  README.md
static-files-module/src/: compression.rs  compression_algorithm.rs  configuration.rs  file_writer.rs  handler.rs  lib.rs  metadata.rs  mime_matcher.rs  path.rs  range.rs  standard_response.rs  tests.rs
static-files-module/testdata/root/: index.html
upstream-module/: Cargo.toml  README.md
upstream-module/src/: lib.rs
virtual-hosts-module/: Cargo.toml  README.md
virtual-hosts-module/src/: configuration.rs  handler.rs  lib.rs
