[package]
name = "auth-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["basic-auth", "auth", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A module implementing handling of HTTP authorization.
"""

[lib]
name = "auth_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
base64 = "0.22.1"
bcrypt = "0.15.1"
bytes.workspace = true
getrandom = "0.2.15"
hmac = "0.12.1"
http.workspace = true
jwt = "0.16.0"
log.workspace = true
maud.workspace = true
module-utils.workspace = true
once_cell = "1.19.0"
pingora-limits.workspace = true
serde.workspace = true
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
structopt.workspace = true

[dev-dependencies]
env_logger.workspace = true
startup-module.workspace = true
static-files-module.workspace = true
structopt.workspace = true
test-log.workspace = true
tokio.workspace = true

[lints]
workspace = true
