[package]
name = "auth-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/pandora-web-server/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["basic-auth", "auth", "web-server", "http", "pandora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A Pandora Web Server module for restricting access to a webspace or parts of it
"""

[lib]
name = "auth_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
base64 = "0.22.1"
bcrypt = "0.15.1"
bytes.workspace = true
clap.workspace = true
getrandom = "0.2.15"
hmac = "0.12.1"
http.workspace = true
jwt = "0.16.0"
log.workspace = true
maud.workspace = true
pandora-module-utils.workspace = true
once_cell = "1.19.0"
pingora-limits.workspace = true
serde.workspace = true
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"

[dev-dependencies]
env_logger.workspace = true
rewrite-module.workspace = true
serde_json = "1.0.119"
startup-module.workspace = true
test-log.workspace = true
tokio.workspace = true

[lints]
workspace = true
