[package]
name = "common-log-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["logging", "common-log", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A module adding allowing to log accesses in common log format in Pingora.
"""

[lib]
name = "common_log_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
http.workspace = true
log.workspace = true
module-utils.workspace = true
once_cell = "1.19.0"
serde.workspace = true
structopt.workspace = true
tokio.workspace = true

[dev-dependencies]
env_logger.workspace = true
startup-module.workspace = true
static-files-module.workspace = true
structopt.workspace = true

[lints]
workspace = true
