[package]
name = "common-log-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/pandora-web-server/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["logging", "common-log", "web-server", "http", "pandora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A Pandora Web Server module for access logging using Common Log Format
"""

[lib]
name = "common_log_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
http.workspace = true
log.workspace = true
pandora-module-utils.workspace = true
once_cell = "1.19.0"
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
env_logger.workspace = true
startup-module.workspace = true
static-files-module.workspace = true

[lints]
workspace = true
