[package]
name = "compression-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["compression", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
description = """
A helper module to configure Pingora's built-in compression.
"""

[lib]
name = "compression_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
log.workspace = true
module-utils.workspace = true
serde.workspace = true
structopt.workspace = true

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
pingora-core.workspace = true
pingora-proxy.workspace = true
tokio.workspace = true

[lints]
workspace = true
