[package]
name = "compression-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["compression", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A helper module to configure Pingora's built-in compression.
"""

[lib]
name = "compression_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
log.workspace = true
pandora-module-utils.workspace = true
structopt.workspace = true

[dev-dependencies]
env_logger.workspace = true
startup-module.workspace = true
static-files-module.workspace = true
test-log.workspace = true
tokio.workspace = true

[lints]
workspace = true
