[package]
name = "headers-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["http-headers", "headers", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
description = """
A module adding configurable HTTP headers to server responses.
"""

[lib]
name = "headers_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
http.workspace = true
log.workspace = true
module-utils.workspace = true
serde.workspace = true

[dev-dependencies]
compression-module.workspace = true
env_logger.workspace = true
pingora-core.workspace = true
pingora-http.workspace = true
pingora-proxy.workspace = true
structopt.workspace = true
test-log.workspace = true
tokio.workspace = true
upstream-module.workspace = true

[lints]
workspace = true
