[package]
name = "headers-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["http-headers", "headers", "web-server", "http", "pandora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A Pandora Web Server module adding configurable HTTP headers to server responses
"""

[lib]
name = "headers_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
http.workspace = true
log.workspace = true
pandora-module-utils.workspace = true
serde.workspace = true

[dev-dependencies]
compression-module.workspace = true
env_logger.workspace = true
startup-module.workspace = true
structopt.workspace = true
test-log.workspace = true
tokio.workspace = true
upstream-module.workspace = true

[lints]
workspace = true
