[package]
name = "ip-anonymization-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["anonymization", "ip-address", "web-server", "http", "pandora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A Pandora Web Server module removing part of the IP address to anonymize requests
"""

[lib]
name = "ip_anonymization_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
log.workspace = true
pandora-module-utils.workspace = true
structopt.workspace = true

[dev-dependencies]
env_logger.workspace = true
startup-module.workspace = true
static-files-module.workspace = true
structopt.workspace = true
test-log.workspace = true
tokio.workspace = true

[lints]
workspace = true
