[package]
name = "module-utils-macros"
version = "0.1.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["utilities", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
description = """
Macro definitions for module-utils crate.
"""

[lib]
name = "module_utils_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.62"

[dev-dependencies]
async-trait.workspace = true
compression-module.workspace = true
module-utils.workspace = true
pingora-core.workspace = true
pingora-proxy.workspace = true
static-files-module.workspace = true
serde.workspace = true
structopt.workspace = true

[lints]
workspace = true
