[package]
name = "module-utils-macros"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["utilities", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
Macro definitions for module-utils crate.
"""

[lib]
name = "module_utils_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.84"
quote = "1.0.36"
syn = { version = "2.0.62", features = ["extra-traits", "full", "visit"] }

[dev-dependencies]
async-trait.workspace = true
compression-module.workspace = true
env_logger.workspace = true
module-utils.workspace = true
pingora-core.workspace = true
static-files-module.workspace = true
structopt.workspace = true
test-log.workspace = true
tokio.workspace = true

[lints]
workspace = true
