[package]
name = "module-utils"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["utilities", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
description = """
Helpers for Pingora modules such as static-files-module crate.
"""

[lib]
name = "module_utils"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
log.workspace = true
module-utils-macros.workspace = true
pingora-core.workspace = true
pingora-proxy.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
