[package]
name = "module-utils"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["utilities", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
Helpers for Pingora modules such as static-files-module crate.
"""

[lib]
name = "module_utils"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
enumset = "1.1.3"
glob = "0.3.1"
http.workspace = true
log.workspace = true
maud.workspace = true
module-utils-macros.workspace = true
pingora = { workspace = true, features = ["proxy"] }
serde.workspace = true
serde_yaml = "0.8"
structopt.workspace = true

[lints]
workspace = true
