[package]
name = "pandora-module-utils-macros"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["utilities", "web-server", "http", "pandora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
Macro definitions for pandora-module-utils crate
"""

[lib]
name = "pandora_module_utils_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.84"
quote = "1.0.36"
serde_derive_internals = "0.29.1"
syn = { version = "2.0.62", features = ["extra-traits", "full", "visit"] }

[dev-dependencies]
async-trait.workspace = true
compression-module.workspace = true
env_logger.workspace = true
pandora-module-utils.workspace = true
startup-module.workspace = true
static-files-module.workspace = true
structopt.workspace = true
test-log.workspace = true
tokio.workspace = true

[lints]
workspace = true
