[package]
name = "pandora-module-utils"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["utilities", "web-server", "http", "pandora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
Helpers for Pandora Web Server and its modules
"""

[lib]
name = "pandora_module_utils"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
enumset = "1.1.3"
glob = "0.3.1"
http.workspace = true
log.workspace = true
maud.workspace = true
once_cell = "1.19.0"
pandora-module-utils-macros.workspace = true
pingora = { workspace = true, features = ["proxy"] }
serde.workspace = true
serde_yaml = "0.8"
structopt.workspace = true

[lints]
workspace = true
