[package]
name = "static-files-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["static", "static-files", "web-server", "http", "pingora"]
exclude = ["testdata/"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A module for serving static files with Pingora.
"""

[lib]
name = "static_files_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
httpdate.workspace = true
log.workspace = true
mime_guess = { version = "2.0.4", default-features = false }
module-utils.workspace = true
percent-encoding.workspace = true
serde.workspace = true
structopt.workspace = true

[dev-dependencies]
compression-module.workspace = true
const_format = "0.2.32"
env_logger.workspace = true
startup-module.workspace = true
test-log.workspace = true
tokio.workspace = true

[lints]
workspace = true
