[package]
name = "upstream-module"
version = "0.1.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["proxy", "reverse-proxy", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
description = """
A helper module to configure Pingora's upstream selection.
"""

[lib]
name = "upstream_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
http.workspace = true
pingora-core.workspace = true
pingora-proxy.workspace = true
log.workspace = true
module-utils.workspace = true
serde.workspace = true
structopt.workspace = true

[lints]
workspace = true
