[package]
name = "upstream-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["proxy", "reverse-proxy", "web-server", "http", "pandora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A Pandora Web Server module to select upstream servers to be proxied
"""

[lib]
name = "upstream_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
http.workspace = true
log.workspace = true
pandora-module-utils.workspace = true
serde.workspace = true

[dev-dependencies]
env_logger.workspace = true
startup-module.workspace = true
test-log.workspace = true
tokio.workspace = true

[lints]
workspace = true
