[package]
name = "virtual-hosts-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/palant/pingora-utils"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["virtual-hosts", "web-server", "http", "pingora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A module handling configuration per virtual host with Pingora.
"""

[lib]
name = "virtual_hosts_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
http.workspace = true
log.workspace = true
module-utils.workspace = true

[dev-dependencies]
env_logger.workspace = true
startup-module.workspace = true
static-files-module.workspace = true
structopt.workspace = true
test-log.workspace = true
tokio.workspace = true

[lints]
workspace = true
