[package]
name = "virtual-hosts-module"
version = "0.2.0"
authors = ["Wladimir Palant"]
repository = "https://github.com/pandora-web-server/pandora-web-server"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["virtual-hosts", "web-server", "http", "pandora"]
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true
description = """
A Pandora Web Server module handling configuration per virtual host and host subpath
"""

[lib]
name = "virtual_hosts_module"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
http.workspace = true
log.workspace = true
pandora-module-utils.workspace = true

[dev-dependencies]
env_logger.workspace = true
startup-module.workspace = true
test-log.workspace = true
tokio.workspace = true
upstream-module.workspace = true

[lints]
workspace = true
