[package]
name = "example-single-static-root"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
compression-module.workspace = true
env_logger.workspace = true
log.workspace = true
pingora-core.workspace = true
pingora-proxy.workspace = true
module-utils.workspace = true
serde.workspace = true
static-files-module.workspace = true
structopt.workspace = true

[lints]
workspace = true
