[package]
name = "example-single-static-root"
version = "0.2.0"
edition = "2021"
rust-version.workspace = true
publish = false

[dependencies]
auth-module.workspace = true
common-log-module.workspace = true
compression-module.workspace = true
env_logger.workspace = true
headers-module.workspace = true
ip-anonymization-module.workspace = true
log.workspace = true
module-utils.workspace = true
rewrite-module.workspace = true
startup-module.workspace = true
static-files-module.workspace = true
structopt.workspace = true

[lints]
workspace = true
