[package]
name = "example-virtual-hosts"
version = "0.2.0"
edition = "2021"
rust-version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
common-log-module.workspace = true
compression-module.workspace = true
env_logger.workspace = true
headers-module.workspace = true
log.workspace = true
pingora-core.workspace = true
pingora-proxy.workspace = true
module-utils.workspace = true
rewrite-module.workspace = true
static-files-module.workspace = true
structopt.workspace = true
upstream-module.workspace = true
virtual-hosts-module.workspace = true

[lints]
workspace = true
